# dotfiles

./: .gitignore  .tmux.conf  .zshrc  brew.txt  pyproject.toml  restart.sh
beets/: config.yaml
cmus/: autosave  beets_buddy.py  cmus_buddy.py
configs/: .tmux.conf  .zshrc  cloud.zsh-theme
install/: apm.sh  brew.sh  gem.sh  npm.sh  pip.sh
